--- a/MCS_JINST/MCS_JINST_main.tex
+++ b/MCS_JINST/MCS_JINST_main.tex
@@ -11,7 +11,187 @@
 \hyphenation{MicroBooNE}
 %\linespread{2} %temp double spacing for style reviewers
 
-\author{The MicroBooNE Collaboration}
+%\author{The MicroBooNE Collaboration}
+
+
+% Authors in alphabetical order
+\author[g]{R.~Acciarri}
+\author[aa]{C.~Adams}
+\author[h]{R.~An}
+\author[c]{J.~Anthony}
+\author[x]{J.~Asaadi}
+\author[a]{M.~Auger}
+\author[g]{L.~Bagby}
+\author[aa]{S.~Balasubramanian}
+\author[g]{B.~Baller}
+\author[n]{C.~Barnes}
+\author[q]{G.~Barr}
+\author[q]{M.~Bass}
+\author[y]{F.~Bay}
+\author[b]{M.~Bishai}
+\author[j]{A.~Blake}
+\author[i]{T.~Bolton}
+\author[m]{L.~Bugel}
+\author[f]{L.~Camilleri}
+\author[f]{D.~Caratelli}
+\author[g]{B.~Carls}
+\author[g]{R.~Castillo~Fernandez}
+\author[g]{F.~Cavanna}
+\author[b]{H.~Chen}
+\author[r]{E.~Church}
+\author[l,f]{D.~Cianci}
+\author[w]{E.~Cohen}
+\author[m]{G.~H.~Collin}
+\author[m]{J.~M.~Conrad}
+\author[u]{M.~Convery}
+\author[f]{J.~I.~Crespo-Anad\'{o}n}
+\author[q]{M.~Del~Tutto}
+\author[j]{D.~Devitt}
+\author[s]{S.~Dytman}
+\author[u]{B.~Eberly}
+\author[a]{A.~Ereditato}
+\author[c]{L.~Escudero Sanchez}
+\author[v]{J.~Esquivel}
+\author[aa]{B.~T.~Fleming}
+\author[d]{W.~Foreman}
+\author[l]{A.~P.~Furmanski}
+\author[l]{D.~Garcia-Gamez}
+\author[k]{G.~T.~Garvey}
+\author[f]{V.~Genty}
+\author[a]{D.~Goeldi}
+\author[i]{S.~Gollapinni}
+\author[s]{N.~Graf}
+\author[aa]{E.~Gramellini}
+\author[g]{H.~Greenlee}
+\author[e]{R.~Grosso}
+\author[q]{R.~Guenette}
+\author[aa]{A.~Hackenburg}
+\author[v]{P.~Hamilton}
+\author[m]{O.~Hen}
+\author[l]{J.~Hewes}
+\author[l]{C.~Hill}
+\author[d]{J.~Ho}
+\author[i]{G.~Horton-Smith}
+\author[k]{E.-C.~Huang}
+\author[g]{C.~James}
+\author[c]{J.~Jan~de~Vries}
+\author[z]{C.-M.~Jen}
+\author[s]{L.~Jiang}
+\author[e]{R.~A.~Johnson}
+\author[b]{J.~Joshi}
+\author[g]{H.~Jostlein}
+\author[f]{D.~Kaleko}
+\author[l,f]{G.~Karagiorgi}
+\author[g]{W.~Ketchum}
+\author[b]{B.~Kirby}
+\author[g]{M.~Kirby}
+\author[g]{T.~Kobilarcik}
+\author[a]{I.~Kreslo}
+\author[q]{A.~Laube}
+\author[b]{Y.~Li}
+\author[j]{A.~Lister}
+\author[h]{B.~R.~Littlejohn}
+\author[g]{S.~Lockwitz}
+\author[a]{D.~Lorca}
+\author[k]{W.~C.~Louis}
+\author[a]{M.~Luethi}
+\author[g]{B.~Lundberg}
+\author[aa]{X.~Luo}
+\author[g]{A.~Marchionni}
+\author[z]{C.~Mariani}
+\author[c]{J.~Marshall}
+\author[h]{D.~A.~Martinez~Caicedo}
+\author[i]{V.~Meddage}
+\author[o]{T.~Miceli}
+\author[k]{G.~B.~Mills}
+\author[m]{J.~Moon}
+\author[b]{M.~Mooney}
+\author[g]{C.~D.~Moore}
+\author[n]{J.~Mousseau}
+\author[l]{R.~Murrells}
+\author[s]{D.~Naples}
+\author[t]{P.~Nienaber}
+\author[j]{J.~Nowak}
+\author[g]{O.~Palamara}
+\author[s]{V.~Paolone}
+\author[o]{V.~Papavassiliou}
+\author[o]{S.F.~Pate}
+\author[g]{Z.~Pavlovic}
+\author[w]{E.~Piasetzky}
+\author[l]{D.~Porzio}
+\author[v]{G.~Pulliam}
+\author[b]{X.~Qian}
+\author[g]{J.~L.~Raaf}
+\author[i]{A.~Rafique}
+\author[u]{L.~Rochester}
+\author[a]{C.~Rudolf~von~Rohr}
+\author[aa]{B.~Russell}
+\author[d]{D.~W.~Schmitz}
+\author[g]{A.~Schukraft}
+\author[f]{W.~Seligman}
+\author[f]{M.~H.~Shaevitz}
+\author[a]{J.~Sinclair}
+\author[g]{E.~L.~Snider}
+\author[v]{M.~Soderberg}
+\author[l]{S.~S{\"o}ldner-Rembold}
+\author[q]{S.~R.~Soleti}
+\author[g]{P.~Spentzouris}
+\author[n]{J.~Spitz}
+\author[e]{J.~St.~John}
+\author[g]{T.~Strauss}
+\author[l]{A.~M.~Szelc}
+\author[p]{N.~Tagg}
+\author[f]{K.~Terao}
+\author[c]{M.~Thomson}
+\author[g]{M.~Toups}
+\author[u]{Y.-T.~Tsai}
+\author[aa]{S.~Tufanli}
+\author[u]{T.~Usher}
+\author[k]{R.~G.~Van~de~Water}
+\author[b]{B.~Viren}
+\author[a]{M.~Weber}
+\author[s]{D.~A.~Wickremasinghe}
+\author[g]{S.~Wolbers}
+\author[m]{T.~Wongjirad}
+\author[o]{K.~Woodruff}
+\author[g]{T.~Yang}
+\author[m]{L.~Yates}
+\author[g]{G.~P.~Zeller}
+\author[d]{J.~Zennamo}
+\author[b]{C.~Zhang}
+
+% Institutions in alphabetical order
+\affiliation[a]{Universit{\"a}t Bern, Bern CH-3012, Switzerland}
+\affiliation[b]{Brookhaven National Laboratory (BNL), Upton, NY, 11973, USA}
+\affiliation[c]{University of Cambridge, Cambridge CB3 0HE, United Kingdom}
+\affiliation[d]{University of Chicago, Chicago, IL, 60637, USA}
+\affiliation[e]{University of Cincinnati, Cincinnati, OH, 45221, USA}
+\affiliation[f]{Columbia University, New York, NY, 10027, USA}
+\affiliation[g]{Fermi National Accelerator Laboratory (FNAL), Batavia, IL 60510, USA}
+\affiliation[h]{Illinois Institute of Technology (IIT), Chicago, IL 60616, USA}
+\affiliation[i]{Kansas State University (KSU), Manhattan, KS, 66506, USA}
+\affiliation[j]{Lancaster University, Lancaster LA1 4YW, United Kingdom}
+\affiliation[k]{Los Alamos National Laboratory (LANL), Los Alamos, NM, 87545, USA}
+\affiliation[l]{The University of Manchester, Manchester M13 9PL, United Kingdom}
+\affiliation[m]{Massachusetts Institute of Technology (MIT), Cambridge, MA, 02139, USA}
+\affiliation[n]{University of Michigan, Ann Arbor, MI, 48109, USA}
+\affiliation[o]{New Mexico State University (NMSU), Las Cruces, NM, 88003, USA}
+\affiliation[p]{Otterbein University, Westerville, OH, 43081, USA}
+\affiliation[q]{University of Oxford, Oxford OX1 3RH, United Kingdom}
+\affiliation[r]{Pacific Northwest National Laboratory (PNNL), Richland, WA, 99352, USA}
+\affiliation[s]{University of Pittsburgh, Pittsburgh, PA, 15260, USA}
+\affiliation[t]{Saint Mary's University of Minnesota, Winona, MN, 55987, USA}
+\affiliation[u]{SLAC National Accelerator Laboratory, Menlo Park, CA, 94025, USA}
+\affiliation[v]{Syracuse University, Syracuse, NY, 13244, USA}
+\affiliation[w]{Tel Aviv University, Tel Aviv, Israel, 69978}
+\affiliation[x]{University of Texas, Arlington, TX, 76019, USA}
+\affiliation[y]{TUBITAK Space Technologies Research Institute, METU Campus, TR-06800, Ankara, Turkey}
+\affiliation[z]{Center for Neutrino Physics, Virginia Tech, Blacksburg, VA, 24061, USA}
+\affiliation[aa]{Yale University, New Haven, CT, 06520, USA}
+
+
+
+
 % \title{Improved Neutrino-Induced-Muon Momentum Determination by Multiple Coulomb Scattering in the MicroBooNE LArTPC from Tuning the Highland Formula}
 \title{Determination of muon momentum in the MicroBooNE LArTPC using an improved model of multiple Coulomb scattering}
 
@@ -76,7 +256,7 @@ MicroBooNE (Micro Booster Neutrino Experiment) is an experiment that uses a larg
 
 The MicroBooNE detector \cite{ub_detectorpaper} consists of a rectangular time-projection chamber (TPC) with dimensions 2.6 m $\times$ 2.3 m $\times$ 10.4 m (width $\times$ height $\times$ length) located 470 m downstream from the Booster Neutrino Beam (BNB) target \cite{BNB_citation}. LArTPCs allow for precise three-dimensional reconstruction of particle interactions. For later reference, the $z$ axis of the detector is horizontal, along the direction of the BNB, while the $x$ direction of the TPC corresponds to the drift coordinate and the $y$ direction is the vertical direction. The mass of active liquid argon contained within the MicroBooNE TPC volume is 89 tons, out of a total mass of 170 tons.\\
 
-A set of 32 photomultiplier tubes (PMTs) and three planes of wires with 3 mm spacing at angles of 0, and $\pm$ 60 degrees with respect to the vertical are located in the TPC for event reconstruction as shown in figure \ref{detector_fig}. The cathode plane operating voltage is -70 kV. A neutrino in the beam interacts with an argon nucleus and the charged outgoing particles traverse the medium, lose energy and leave an ionization trail. The resulting ionization electrons drift in a 273 $\text{V/cm}$ electric field to the wire planes constituting the anode. The passage of these electrons through the first two wire planes induces a signal in the wires, and their collection on the third plane also generates a signal. These signals are used to create three distinct two-dimensional views (in terms of wire and time) of the event. Combining these wire signals allow for full three-dimensional reconstruction of the event, with PMT signals providing information about the absolute drift ($x$) coordinate. The boundaries of the fiducial volume used in this analysis are set back from the six faces of the active volume by distances of between 20 and 37 cm, depending on the face, to reduce the impact of electric-field non-uniformities near the edges of the TPC \cite{SCE_publicnote}. This volume corresponds to a mass of 55 tons.\\
+A set of 32 photomultiplier tubes (PMTs) and three planes of wires with 3 mm spacing at angles of 0, and $\pm$ 60 degrees with respect to the vertical are located in the TPC for event reconstruction as shown in figure \ref{detector_fig}. The cathode plane operating voltage is -70 kV. A neutrino in the beam interacts with an argon nucleus and the charged outgoing particles traverse the medium, lose energy and leave an ionization trail. The resulting ionization electrons drift in a 273 $\text{V/cm}$ electric field to the wire planes constituting the anode. The passage of these electrons through the first two wire planes induces a signal in the wires, and their collection on the third plane also generates a signal. These signals are used to create three distinct two-dimensional views (in terms of wire and time) of the event. Combining these wire signals allow for full three-dimensional reconstruction of the event, with PMT signals providing information about the absolute drift ($x$) coordinate. The boundaries of the fiducial volume used in this analysis are set back from the six faces of the active volume by distances of between 20 and 37 cm, depending on the face, to reduce the impact of electric-field non-uniformities near the edges of the TPC. This volume corresponds to a mass of 55 tons.\\
 
 \begin{figure}[ht!]
 \centering
@@ -88,7 +268,7 @@ The Booster Neutrino Beam (BNB) is composed predominantly of muon neutrinos ($\n
 
 \section{Multiple Coulomb scattering}
 
-Multiple Coulomb scattering occurs when a charged particle traverses medium and undergoes electromagnetic scattering off of atomic nuclei. This scattering perturbs the original trajectory of the particle within the material (figure \ref{mcs_nocap_fig}). For a given initial momentum $p$, the angular deflection scatters of a particle in either the $x'$ direction or $y'$ direction (as indicated in the aforementioned figure) form a Gaussian distribution centered at zero with an RMS width, $\sigma_o^{\text{HL}}$, given by the Highland formula \cite{highland}\cite{highland-lynch-dahl} 
+Multiple Coulomb scattering occurs when a charged particle traverses medium and undergoes electromagnetic scattering off atomic nuclei. This scattering perturbs the original trajectory of the particle within the material (figure \ref{mcs_nocap_fig}). For a given initial momentum $p$, the angular deflection scatters of a particle in either the $x'$ direction or $y'$ direction (as indicated in the aforementioned figure) form a Gaussian distribution centered at zero with an RMS width, $\sigma_o^{\text{HL}}$, given by the Highland formula \cite{highland}\cite{highland-lynch-dahl} 
 
 \begin{equation}\label{highland_eqtn}
 	\sigma_o^{\text{HL}}=\frac{S_2}{p\beta c}z\sqrt{\frac{\ell}{X_0}}\left[1+\epsilon\times\ln\left(\frac{\ell}{X_0}\right)\right],
@@ -100,13 +280,13 @@ Multiple Coulomb scattering occurs when a charged particle traverses medium and 
 \end{equation}
 For this analysis, the $\sigma_o^{\text{res}}$ term is given a fixed value of 3 mrad which has been determined to be an acceptable value based on simulation studies muons at higher momenta. At 4.5 GeV/c muon momentum and $l\approx X_0$, equation \ref{highland_eqtn} predicts an RMS angular scatter of 3 mrad, comparable to the detector resolution. The fully contained muons addressed in this analysis have momenta below $1.5$~$\text{GeV/c}$, making the impact of this detector resolution minimal for that sample.\\
 
-With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track information, without any calorimetric or track range information. In neutrino physics experiments, past emulsion detectors like the DONUT \cite{DONUT_paper} and OPERA \cite{OPERA_paper} Collaborations have used MCS to determine particle momenta. Additionally, the MACRO \cite{MACRO_paper} Collaboration at Gran Sasso Laboratory utilized this technique. The original method for using MCS to determine particle momentum in a LArTPC used a Kalman Filter and was described by the ICARUS collaboration \cite{icarus_mcs_paper}, and they more recently described another method \cite{new_icarus_paper}. The likelihood-based method, discussed in this paper for use in the MicrobooNE detector and described in detail in section \ref{MCS_technique_section}, has improved on the ICARUS method by tuning the underlying phenomenological formula.
+With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track information, without any calorimetric or track range information. In neutrino physics experiments, emulsion detectors like the DONUT \cite{DONUT_paper} and OPERA \cite{OPERA_paper} Collaborations have used MCS to determine particle momenta. Additionally, the MACRO \cite{MACRO_paper} Collaboration at Gran Sasso Laboratory utilized this technique. The original method for using MCS to determine particle momentum in a LArTPC used a Kalman Filter and was described by the ICARUS collaboration \cite{icarus_mcs_paper}, and they more recently described another method \cite{new_icarus_paper}. The likelihood-based method, discussed in this paper for use in the MicrobooNE detector and described in detail in section \ref{MCS_technique_section}, has improved on the ICARUS method by tuning the underlying phenomenological formula.
 
 
 \begin{figure}[ht!]
 \centering
-	\includegraphics[width=0.9\textwidth]{Figures/static_figs/mcs_nocap.png} \\
-\caption{The particle's trajectory is deflected as it traverses the material.}\label{mcs_nocap_fig}
+	\includegraphics[width=0.9\textwidth]{Figures/static_figs/mcs_nocap_highres.pdf} \\
+\caption{The particle's trajectory is deflected as it traverses the material. The angular scatter in the labeled $x'$ plane is shown as $\theta_x$.}\label{mcs_nocap_fig}
 \end{figure}
 
 
@@ -351,7 +531,7 @@ MCS momentum versus range-based momentum for this sample of 396 tracks is shown 
 \caption{Inverse momentum difference (as defined in the text) fractional bias (top) and resolution (bottom) for automatically selected contained $\nu_\mu$CC-induced muons from full simulated BNB events with cosmic overlay where the track matches with the true muon track (blue), and automatically selected (see text) contained $\nu_\mu$CC-induced muons from MicroBooNE data (green).}\label{MCS_range_bias_resolution_DataRecoTrack_fig}
 \end{figure}
 
-Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig} indicates a bias in the MCS momentum calculation on the order of a few percent, with a resolution that decreases from about 10\% for contained reconstructed tracks in data and simulation with range momentum around 0.45 GeV/c (which corresponds to a length of about 1.5 m) to below 5\% for contained reconstructed tracks in data and simulation with range momentum about 1.15 GeV/c (which corresponds to a length of about 4.6 meters). Resolution improving with length of track is intuitive; the longer the track, the more angular scattering measurements can be made to improve the likelihood. In general the bias and resolutions agree between data and simulation within uncertainty.\\
+Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig} indicates a bias in the MCS momentum calculation on the order of a few percent, with a resolution that decreases from about 10\% for contained reconstructed tracks in data and simulation with range momentum around 0.45 GeV/c (which corresponds to a length of about 1.5 m) to below 5\% for contained reconstructed tracks in data and simulation with range momentum about 1.15 GeV/c (which corresponds to a length of about 4.6 meters). Resolution improving with length of track is expected; the longer the track, the more angular scattering measurements can be made to improve the likelihood. In general the bias and resolutions agree between data and simulation within uncertainty.\\
 
 \subsection{Impact of Highland formula tuning}\label{highland_formula_tuning_impact_section}
 
@@ -370,7 +550,7 @@ In order to examine the impact of the Highland formula tuning described in secti
 
 
 \section{MCS performance on exiting muons in MicroBooNE simulation}
-In this section we quantify the MCS algorithm performance on a sample of exiting muon tracks in simulated BNB $\nu_\mu$CC interactions within the MicroBooNE detector. The tracks are automatically reconstructed by the same ``pandoraNuPMA'' algorithm described in section \ref{track_segmentation_and_scattering_angle_computation_section}, and all tracks have a length of at least $1$~m within the TPC. This simulation does not include space-charge effects. The relationship between the MCS and the true momenta at the beginning of the track as given by simulation for this sample of 28,000 exiting muon tracks is shown in figure \ref{MCS_true_comparison_exiting_fig}.\\
+In this section we quantify the MCS algorithm performance on a sample of well reconstructed exiting muon tracks in simulated BNB $\nu_\mu$CC interactions within the MicroBooNE detector. The tracks are automatically reconstructed by the same ``pandoraNuPMA'' algorithm described in section \ref{track_segmentation_and_scattering_angle_computation_section}, and all tracks have a length of at least $1$~m within the TPC. This simulation does not include space-charge effects. The relationship between the MCS and the true momenta at the beginning of the track as given by simulation for this sample of 28,000 exiting muon tracks is shown in figure \ref{MCS_true_comparison_exiting_fig}.\\
 
 \begin{figure}[ht!]
 \centering
@@ -429,8 +609,8 @@ The fractional bias and resolution as a function of true momentum are shown in f
 \section{Conclusions}
 We have described a multiple Coulomb scattering maximum likelihood method for estimating the momentum of a three dimensional reconstructed track in a LArTPC and have provided motivation for development of such a technique. Using simulation, we have shown that the standard Highland formula should be re-tuned specifically for scattering in liquid argon. After validating range-based momentum-determination techniques with MicroBooNE simulation, we have demonstrated the accuracy and precision of the MCS-based momentum reconstruction in MicroBooNE data by comparing its performance to the range-based method. For 398 fully-contained BNB $\nu_\mu$CC-induced muons, the MCS method exhibits a fractional bias below 3\% and a momentum resolution below 10\%, agreeing with simulation predictions. Using simulation of a separate sample of uncontained muon tracks in MicroBooNE with at least one meter contained in the active volume, the MCS-based reconstruction is shown to produce a fractional bias below 4\% and a momentum resolution of better than 15\% for muons in the relevant BNB energy region of below 2 GeV.
 
-
-
+\acknowledgments
+This material is based upon work supported by the following: the U.S. Department of Energy, Office of Science, Offices of High Energy Physics and Nuclear Physics; the U.S. National Science Foundation; the Swiss National Science Foundation; the Science and Technology Facilities Council of the United Kingdom; and The Royal Society (United Kingdom). Additional support for the laser calibration system and cosmic ray tagger was provided by the Albert Einstein Center for Fundamental Physics. Fermilab is operated by Fermi Research Alliance, LLC under Contract No. DE-AC02-07CH11359 with the United States Department of Energy.
 
 
 % We suggest to always provide author, title and journal data:
@@ -497,10 +677,10 @@ We have described a multiple Coulomb scattering maximum likelihood method for es
 
   %224 citations counted in INSPIRE as of 13 Feb 2017
 
-  \bibitem{SCE_publicnote}
-  R.~Acciarri {\it et al.} [MicroBooNE Collaboration],
-  \textit{Study of Space Charge Effects in MicroBooNE},
-  www-microboone.fnal.gov/publications/publicnotes/MICROBOONE-NOTE-1018-PUB.pdf.
+  % \bibitem{SCE_publicnote}
+  % R.~Acciarri {\it et al.} [MicroBooNE Collaboration],
+  % \textit{Study of Space Charge Effects in MicroBooNE},
+  % www-microboone.fnal.gov/publications/publicnotes/MICROBOONE-NOTE-1018-PUB.pdf.
 
   % %2
   % \bibitem{lartpc}
